...
                    <navigationItem key="navigationItem" title="Doodle Monster" id="Wlv-TT-dS7"/>
                    <connections>
                        <outlet property="monsterCollection" destination="ng9-zd-dYT" id="Zjj-oH-xCx"/>
                        <segue destination="oq9-zT-ZCH" kind="unwind" identifier="ShowLoginScreen" unwindAction="unwindToLoginScreen:" id="krK-8E-FTi"/>
                        <segue destination="p3D-xo-2oL" kind="show" identifier="goToGame" id="6R0-mk-g1C"/>
...
                                        </subviews>
                                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                        <accessibility key="accessibilityConfiguration" identifier="ImageContainer">
                                            <bool key="isElement" value="YES"/>
                                        </accessibility>
...
                            </button>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="NXU-3c-UyV">
                                <accessibility key="accessibilityConfiguration" identifier="saveDrawing" label="Save drawing"/>
                                <constraints>
                                    <constraint firstAttribute="width" constant="100" id="XOx-5X-lI2">
...
                                    </label>
                                    <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Iit-aG-BWO">
                                        <accessibility key="accessibilityConfiguration" identifier="NameLetter"/>
                                        <constraints>
                                            <constraint firstAttribute="width" constant="30" id="sWm-Ge-ETd"/>
...
                                        <subviews>
                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ArP-VJ-lJV">
                                                <accessibility key="accessibilityConfiguration" identifier="saveTurn" label="Save turn"/>
                                                <fontDescription key="fontDescription" type="system" pointSize="28"/>
                                                <state key="normal" title="Save"/>
...
                    <connections>
                        <outlet property="bottomConstraint" destination="scG-GP-u51" id="EeR-9m-7pC"/>
                        <outlet property="monsterName" destination="xAx-Yh-u93" id="zLC-aT-0ad"/>
                        <outlet property="nextLetterInput" destination="Iit-aG-BWO" id="q7O-1R-mmW"/>
                        <segue destination="LDK-Zq-to6" kind="unwind" identifier="GoToMainMenu" unwindAction="unwindToMainMenu:" id="q66-cm-CSD"/>
...
                                                </constraints>
                                                <inset key="contentEdgeInsets" minX="0.0" minY="0.0" maxX="0.0" maxY="14"/>
                                                <state key="normal" title="Start!" backgroundImage="button-raised"/>
                                                <variation key="heightClass=regular-widthClass=compact">
                                                    <mask key="constraints">
...
                        <subviews>
                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="0gS-lg-7GU">
                                <accessibility key="accessibilityConfiguration" identifier="SearchText"/>
                                <constraints>
                                    <constraint firstAttribute="width" constant="328" id="eMd-jL-8vl"/>
...
