...
                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="pjs-kA-75p">
                    <rect key="frame" x="0.0" y="16" width="280" height="109"/>
                    <constraints>
                        <constraint firstAttribute="width" constant="280" id="s78-4U-Uqj"/>
                    </constraints>
                    <inset key="contentEdgeInsets" minX="0.0" minY="0.0" maxX="0.0" maxY="14"/>
                    <state key="normal" title="New Monster" backgroundImage="button-raised"/>
                    <variation key="heightClass=regular-widthClass=compact">
                        <mask key="constraints">
                            <exclude reference="s78-4U-Uqj"/>
                        </mask>
                    </variation>
                    <connections>
                        <action selector="newMonster:" destination="jL9-xb-uRl" eventType="touchUpInside" id="HMf-Vm-6vW"/>
                    </connections>
                </button>
                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="iJ3-Uu-N5x">
                    <rect key="frame" x="110" y="125" width="60" height="30"/>
                    <accessibility key="accessibilityConfiguration" label="Sign Out"/>
                    <state key="normal" title="Sign Out"/>
                    <connections>
                        <action selector="signOut:" destination="jL9-xb-uRl" eventType="touchUpInside" id="9vB-eu-eo0"/>
                    </connections>
                </button>
            </subviews>
...
