...
        var player1 = Mapper<Player>().map(JSON: json1)!
        player1.password = "bleep"
        mockApi.players.append(player1)
        
        let json2 = [
            "id": "22222",
            "email": "jerry@bleepsmazz.com",
            "displayName": "Jerry"
        ]
        var player2 = Mapper<Player>().map(JSON: json2)!
        player2.password = "bleep"
        mockApi.players.append(player2)
        
        print(ProcessInfo.processInfo.environment["CURRENT_USER"])
        if let currentPlayerId = ProcessInfo.processInfo.environment["CURRENT_USER"] {
            for player in mockApi.players {
                if player.id == currentPlayerId {
                    print("Logging in as player \(player)")
                    mockSession.me = player
                }
...
