...

        scrollView.panGestureRecognizer.minimumNumberOfTouches = 2
        scrollView.delaysContentTouches = false
        scrollView.delegate = self
        scrollView.drawingDelegate = self
        scrollView.accessibilityActivate()
        scrollView.accessibilityIdentifier = "drawingScrollView"
        
        let uiDrawingService = UIDrawingService(
            currentTurnImageView: self.currentTurnImageView,
            previousTurnImageView: self.previousTurnsImageView
        )
        viewModel.drawingService = DrawingService(
...
